[gd_scene load_steps=6 format=3 uid="uid://djqacw65swdqc"]

[ext_resource type="Script" path="res://demo.gd" id="1_76ghk"]
[ext_resource type="PackedScene" uid="uid://c5hi8nsm1d2hb" path="res://sm_42v_1.tscn" id="2_t8uqe"]
[ext_resource type="PackedScene" uid="uid://1v37c7y4cwcx" path="res://gauge.tscn" id="3_dosfj"]
[ext_resource type="PackedScene" uid="uid://br6moafqr8ykn" path="res://debug_panel.tscn" id="3_p4ciw"]
[ext_resource type="PackedScene" uid="uid://cslby72tp46ig" path="res://debug_switch.tscn" id="4_xvhus"]

[node name="Demo" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_76ghk")

[node name="EngineRPM" parent="." instance=ExtResource("3_dosfj")]
position = Vector2(0, 453)
start_angle = 140.0
label = "Engine RPM"

[node name="EngineCurrent" parent="." instance=ExtResource("3_dosfj")]
position = Vector2(200, 453)
start_angle = 140.0
label = "Engine Current"

[node name="OilPressure" parent="." instance=ExtResource("3_dosfj")]
position = Vector2(400, 453)
start_angle = 140.0
label = "Oil Pressure"

[node name="UI" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Header" type="HBoxContainer" parent="UI"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TrainName" type="Label" parent="UI/Header"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0

[node name="BatteryLabel" type="Label" parent="UI/Header"]
layout_mode = 2
size_flags_horizontal = 0
text = "Battery"

[node name="BatteryProgressBar" type="ProgressBar" parent="UI/Header"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
tooltip_text = "Battery"
max_value = 110.0
show_percentage = false

[node name="BatteryValue" type="Label" parent="UI/Header"]
unique_name_in_owner = true
layout_mode = 2

[node name="Title" type="Label" parent="UI/Header"]
layout_mode = 2
size_flags_horizontal = 10
text = "MaSzyna MOVER TESTER"
horizontal_alignment = 2

[node name="DebugPanels" type="HFlowContainer" parent="UI"]
layout_mode = 2
size_flags_vertical = 3

[node name="DebugEngine" parent="UI/DebugPanels" instance=ExtResource("3_p4ciw")]
unique_name_in_owner = true
layout_mode = 2
title = "Engine"

[node name="DebugSecurity" parent="UI/DebugPanels" instance=ExtResource("3_p4ciw")]
unique_name_in_owner = true
layout_mode = 2
title = "Security"

[node name="DebugBrake" parent="UI/DebugPanels" instance=ExtResource("3_p4ciw")]
unique_name_in_owner = true
layout_mode = 2
title = "Brake"

[node name="DebugTrain" parent="UI/DebugPanels" instance=ExtResource("3_p4ciw")]
unique_name_in_owner = true
layout_mode = 2
title = "Train"

[node name="HBoxContainer" type="HBoxContainer" parent="UI"]
layout_mode = 2
size_flags_vertical = 0

[node name="Label" type="Label" parent="UI/HBoxContainer"]
layout_mode = 2
text = "Custom train part calls count:"

[node name="CustomTrainPartCount" type="Label" parent="UI/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0"

[node name="MoverSwitches" type="HBoxContainer" parent="UI"]
layout_mode = 2

[node name="General" type="HFlowContainer" parent="UI/MoverSwitches"]
layout_mode = 2

[node name="Label" type="Label" parent="UI/MoverSwitches/General"]
layout_mode = 2
text = "General"

[node name="Battery" parent="UI/MoverSwitches/General" instance=ExtResource("4_xvhus")]
layout_mode = 2
label = "Battery"
node = NodePath("../../../../SM42_V1")
property = "switches/battery_enabled"

[node name="MainIncrease" type="Button" parent="UI/MoverSwitches/General"]
layout_mode = 2
text = "Main +"

[node name="MainDecrease" type="Button" parent="UI/MoverSwitches/General"]
layout_mode = 2
text = "Main -"

[node name="Forward" type="Button" parent="UI/MoverSwitches/General"]
layout_mode = 2
text = "Forward"

[node name="Reverse" type="Button" parent="UI/MoverSwitches/General"]
layout_mode = 2
text = "Reverse"

[node name="Security" type="HFlowContainer" parent="UI/MoverSwitches"]
layout_mode = 2

[node name="Label" type="Label" parent="UI/MoverSwitches/Security"]
layout_mode = 2
text = "Security"

[node name="CA_SHP_Reset" parent="UI/MoverSwitches/Security" instance=ExtResource("4_xvhus")]
layout_mode = 2
label = "CA/SHP"
type = 1
node = NodePath("../../../../SM42_V1/TrainSecuritySystem")
property = "switches/reset"

[node name="Diesel" type="HFlowContainer" parent="UI/MoverSwitches"]
layout_mode = 2

[node name="Label" type="Label" parent="UI/MoverSwitches/Diesel"]
layout_mode = 2
text = "Diesel"

[node name="OilPump" parent="UI/MoverSwitches/Diesel" instance=ExtResource("4_xvhus")]
layout_mode = 2
label = "Oil Pump"
type = 1
node = NodePath("../../../../SM42_V1/StonkaDieselEngine")
property = "switches/oil_pump_enabled"

[node name="FuelPump" parent="UI/MoverSwitches/Diesel" instance=ExtResource("4_xvhus")]
layout_mode = 2
label = "Fuel Pump"
type = 1
node = NodePath("../../../../SM42_V1/StonkaDieselEngine")
property = "switches/fuel_pump_enabled"

[node name="Main" parent="UI/MoverSwitches/Diesel" instance=ExtResource("4_xvhus")]
layout_mode = 2
label = "Main"
type = 0
node = NodePath("../../../../SM42_V1/StonkaDieselEngine")
property = "switches/main"

[node name="Electric" type="HFlowContainer" parent="UI/MoverSwitches"]
layout_mode = 2

[node name="Label" type="Label" parent="UI/MoverSwitches/Electric"]
layout_mode = 2
text = "Electric"

[node name="Converter" parent="UI/MoverSwitches/Electric" instance=ExtResource("4_xvhus")]
layout_mode = 2
label = "Converter"
node = NodePath("../../../../SM42_V1/TestowySilnikElektryczny")
property = "switches/converter"

[node name="Compressor" parent="UI/MoverSwitches/Electric" instance=ExtResource("4_xvhus")]
layout_mode = 2
label = "Compressor"
node = NodePath("../../../../SM42_V1/TestowySilnikElektryczny")
property = "switches/compressor"

[node name="Main" parent="UI/MoverSwitches/Electric" instance=ExtResource("4_xvhus")]
layout_mode = 2
label = "Main"
type = 0
node = NodePath("../../../../SM42_V1/TestowySilnikElektryczny")
property = "switches/main"

[node name="Brakes" type="HFlowContainer" parent="UI/MoverSwitches"]
layout_mode = 2

[node name="Label" type="Label" parent="UI/MoverSwitches/Brakes"]
layout_mode = 2
text = "Brakes"

[node name="BrakeLevel" type="SpinBox" parent="UI/MoverSwitches/Brakes"]
layout_mode = 2

[node name="Releaser" parent="UI/MoverSwitches/Brakes" instance=ExtResource("4_xvhus")]
layout_mode = 2
label = "Releaser"
type = 1
node = NodePath("../../../../SM42_V1/Brake")
property = "switches/releaser"

[node name="SM42_V1" parent="." instance=ExtResource("2_t8uqe")]
switches/battery_enabled = true

[connection signal="button_up" from="UI/MoverSwitches/General/MainIncrease" to="." method="_on_main_increase_button_up"]
[connection signal="button_up" from="UI/MoverSwitches/General/MainDecrease" to="." method="_on_main_decrease_button_up"]
[connection signal="button_up" from="UI/MoverSwitches/General/Forward" to="." method="_on_forward_button_up"]
[connection signal="button_up" from="UI/MoverSwitches/General/Reverse" to="." method="_on_reverse_button_up"]
[connection signal="value_changed" from="UI/MoverSwitches/Brakes/BrakeLevel" to="." method="_on_brake_level_value_changed"]

[editable path="SM42_V1"]
